# drinkup-contract-solana

./: Anchor.toml  README.md
programs/drink-challenge-task/: Cargo.toml
programs/drink-challenge-task/src/: lib.rs
tests/: drink-challenge-task.ts
