[package]
name = "drink-challenge-task"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drink_challenge_task"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { versions = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"